--- a/actividades.html
+++ b/actividades.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div>
-          <a href="index.html"><img src="./Imagenes/LOGOAEENA.jpg" class="logo"></a>
+          <a href="index.html"><img src="./imagenes/LOGOAEENA.jpg" class="logo"></a>
         </div>
         
         <ul>
