--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div>
-      <a href="index.html"><img src="./Imagenes/LOGOAEENA.jpg" class="logo"></a>
+      <a href="index.html"><img src="./imagenes/LOGOAEENA.jpg" class="logo"></a>
     </div>
 
     <ul>
@@ -29,7 +29,7 @@
     <section class="banner">
     
       <video autoplay muted loop>
-        <source src="./Imagenes/video_yoga.mp4" type="video/mp4">
+        <source src="./imagenes/video_yoga.mp4" type="video/mp4">
       </video>
     </section>
     <section class="conteiner">
