--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div>
-            <a href="index.html"><img src="./Imagenes/LOGOAEENA.jpg" class="logo"></a>
+            <a href="index.html"><img src="./imagenes/LOGOAEENA.jpg" class="logo"></a>
         </div>
 
         <ul>
@@ -41,16 +41,16 @@
         <h2 id="titulo-profesionales">Profesionales:</h2>
         <div class="profesionales">
             <div id="profesional-1">
-                <img src="imagenes/personauno.avif" alt="Andre profesora de pilates"> 
+                <img src="./imagenes/personauno.avif" alt="Andre profesora de pilates"> 
             </div>
             <div id="profesional-2">
-                <img src="imagenes/personados.avif" alt="Milagros prfoesora de mindfulness" />
+                <img src="./imagenes/personados.avif" alt="Milagros prfoesora de mindfulness" />
             </div>
             <div id="profesional-3">
-                <img src="imagenes/personatres.avif" alt="Sofia profesora de yoga" />
+                <img src="./imagenes/personatres.avif" alt="Sofia profesora de yoga" />
             </div>
             <div id="profesional-4">
-                <img src="imagenes/personacuatro.avif" alt="Sonia prfoesora de gymfuncional" />
+                <img src="./imagenes/personacuatro.avif" alt="Sonia prfoesora de gymfuncional" />
             </div>
         </div>
 
